Small Fixes
- Added Bonus Feature
- Fixed small layout issues

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,8 @@ a:visited { text-decoration: none ; color:inherit ; }
 
 /* Customs */
 
+.vhf-80{ height: 80vh; }
+
 .nav
 {
     -webkit-box-shadow: 0px 2px 2px 0px rgba(28,28,28,0.4);
